# fastapi-blinko-meet

./: .gitignore  Caddyfile  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: security.py
backend/app/database/: db.py
backend/app/models/: admin.py  ai.py  auth.py  chat.py  media.py  room.py  user.py
backend/app/routing/: admin.py  ai.py  auth.py  chat.py  employee.py  media.py  rooms.py  users.py
backend/app/schemas/: __init__.py  admin.py  ai.py  auth.py  badge.py  chat.py  common.py  meeting.py  user.py
backend/app/services/: achievements.py  audio_manager.py  auth.py  get_user.py  gigachat.py
backend/app/tests/: test_gigachat_service.py  test_rooms.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  i18n.js  index.css
frontend/src/api/: audioSocket.js  auth.js  chat.js  client.js  employee.js  rooms.js  user.js
frontend/src/components/chat/: EmojiGuide.jsx
frontend/src/components/screens/: AdminDashboard.jsx  AdminLogin.jsx  CreateRoomScreen.jsx  EditProfile.jsx  EmployeeDashboard.jsx  JoinRoomScreen.jsx  JoinScreen.jsx  LandingScreen.jsx  LoginPanel.jsx  LoginScreen.jsx  LoginScreenUser.jsx  MeetRoom.jsx  MeetingSummaryProfile.jsx  PreCallScreen.jsx  SidePanel.jsx  SummaryScreen.jsx  UserProfile.jsx  UserSearch.jsx  VideoCallScreen.jsx
frontend/src/components/ui/: Button.jsx  DivButton.jsx  FloatingEmoji.jsx  Input.jsx  InviteModal.jsx  ScreenWrapper.jsx  Select.jsx  SettingsModal.jsx  SideBar.jsx  Toast.jsx  VideoTile.jsx
frontend/src/hooks/: useLang.js  useParticipants.js  useScreenRecorder.js
frontend/src/lib/chat/: emojiMap.js  parseMessage.jsx
frontend/src/utils/: AudioPlayer.js
frontend/src/webrtc/: peer.js  signaling.js  useWebRTC.js
media-core/: Cargo.toml  Dockerfile
media-core/src/: main.rs  state.rs
media-core/src/handlers/: mod.rs  offer.rs  ws_handler.rs
media-core/src/rtc/: mod.rs  peer.rs  track.rs
