[project]
name = "video-conference"
version = "0.1.0"
description = "Online platform for video calls, chat, and screen sharing"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "fastapi (>=0.121.2,<0.122.0)"
]
