[tool.poetry]
package-mode = false

[project]
name = "video-conference"
version = "0.1.0"
description = "Online platform for video calls, chat, and screen sharing"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "cryptography (>=46.0.7,<47.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "python-multipart (>=0.0.26,<0.0.27)",
    "websockets (>=16.0,<17.0)",
    "vosk (>=0.3.45,<0.4.0)",
    
                ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "fastapi (>=0.121.2,<0.122.0)",
    "pydantic[email] (>=2.12.4,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
